assets/css/style.css
* {
  font-family: 'Playfair Display', serif;
} 
nav.navbar {
  /* margin-right: 12px !important; */
  /* padding-right: 12px !important; */
  right: 0;
}
nav{
  padding:15px;
}

.navbar-nav li a:after{
  bottom: 0;
  content: "";
  display: block;
  height: 2px;
  left: 50%;
  position: relative;
  background: #fff;
  transition: width 0.3s ease 0s, left 0.3s ease 0s;
  width: 0;
}
.navbar-nav li a:hover:after{ 
  width: 100%;
  left: 0; 
}

.nav-item{
  padding: 15px;
  font-size:15px;
}
#loading {
  position: fixed;
  width: 100%;
  height: 100vh;
  background: #03090f
    url("https://www.icegif.com/wp-content/uploads/loading-icegif.gif?fit=880%2C440&ssl=1")
    no-repeat center;
  z-index: 999;
}
.body-style {
  background-image: url("https://res.cloudinary.com/dkak37mek/image/upload/v1631569685/alfons-morales-YLSwjSy7stw-unsplash_jdnjxk.jpg?raw=true");
  
  background-size: cover;
  background-repeat: no-repeat;
  background-color: rgba(0,0,0,0.9);
    box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
    z-index: 1;
}
.bg-info {
  /*   background-color: #2e2e2e!important;
  box-shadow: 0px 0px 16px 9px black; */
  background-color: #343a40 !important;
  box-shadow: 0px 0px 16px 9px black;
}

.navbar-light .navbar-nav .active > .nav-link,
.navbar-light .navbar-nav .nav-link.active,
.navbar-light .navbar-nav .nav-link.show,
.navbar-light .navbar-nav .show > .nav-link {
  color: rgb(243 243 243);
  font-weight: bold;
}
/* Category */
.form-check-input {
  border-radius: 15px;
  margin-top: 10px;
  padding: 5px;
  width:25%;
}
/* Authors */
.form-check-input1 {
  border-radius: 15px;
  margin-top: 10px;
  padding: 5px;
  width:25%;
}
.container h1 {
  padding-top: 70px;
  color: rgb(255, 255, 255);
  /* font-family: "Poiret One", cursive; */
  font-weight: bolder;
  letter-spacing: 0.1em;
}

.navbar-light .navbar-nav .nav-link {
  color: rgb(255 255 255 / 50%);
  transition-duration: 0.3s;
  font-weight: bold;
}
.navbar-light .navbar-nav .nav-link:hover {
  transition-duration: 0.3s;
  color: rgb(255 255 255 / 100%);
}
html {
  scroll-behavior: smooth;
}

#issueDate{
  border-radius:15px;
  height:30px;
}

.input-box {
  border: none;
  border-bottom: 1.5px solid rgba(168, 154, 154, 0.322);
  border-radius: 0px;
  transition: none;
  width: 33%;
  height: 30px;
  padding-bottom: 2px;
  border-radius: 15px;
  margin-top: 14px;
  padding-left: 10px;
}
.input-box:focus {
  outline: none;
  border-bottom: 1.5px solid yellowgreen;
  /* zoom: 1.1; */
  transform: scaleY(1.05);
}
.input-box {
  transition: border 0.5s ease-out;
  /* transition: transform 0.5s ease-out; */
}

.btn {
  width: 150px;
  height: 40px;
  border: none;
  outline: none;
  color: #fff;
  background: #5282d4;
  background-image: -webkit-linear-gradient(top, #5282d4, #28667d);
  background-image: -moz-linear-gradient(top, #5282d4, #28667d);
  background-image: -ms-linear-gradient(top, #5282d4, #28667d);
  background-image: -o-linear-gradient(top, #5282d4, #28667d);
  background-image: linear-gradient(to bottom, #5282d4, #28667d);
  cursor: pointer;
  position: relative;
  z-index: 0;
  border-radius: 10px;
  margin-top: 2rem;
}
#searchsymbol{
  width: 30px;
}
#searchTxt{
  border-radius: 10px;
}
.btn:before {
  content: "";
  background: linear-gradient(
    45deg,
    #ff0000,
    #ff7300,
    #fffb00,
    #48ff00,
    #00ffd5,
    #002bff,
    #7a00ff,
    #ff00c8,
    #ff0000
  );
  position: absolute;
  top: -2px;
  left: -2px;
  background-size: 400%;
  z-index: -1;
  filter: blur(5px);
  width: calc(100% + 4px);
  height: calc(100% + 4px);
  animation: glowing 20s linear infinite;
  opacity: 0;
  transition: opacity 0.4s ease-in-out;
  border-radius: 10px;
  box-shadow: 0 9px blueviolet;
}

.btn-primary {
  margin-top: 4rem;
}

.btn:active {
  color: #000;
  box-shadow: 0 4px black;
}

.btn:active:after {
  background: transparent;
  animation: glowing 50s linear infinite;
  transition: opacity 0.4s ease-in-out;
}

.btn:hover:before {
  opacity: 1;
  box-shadow: 0 4px black;
}

.btn:after {
  z-index: -1;
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background: #5282d4;
  background-image: -webkit-linear-gradient(top, #5282d4, #28667d);
  background-image: -moz-linear-gradient(top, #5282d4, #28667d);
  background-image: -ms-linear-gradient(top, #5282d4, #28667d);
  background-image: -o-linear-gradient(top, #5282d4, #28667d);
  background-image: linear-gradient(to bottom, #5282d4, #28667d);
  left: 0;
  top: 0;
  border-radius: 10px;
  /* box-shadow: 0 4px black; */
}

@keyframes glowing {
  0% {
    background-position: 0 0;
  }
  50% {
    background-position: 400% 0;
  }
  100% {
    background-position: 0 0;
  }
}

.space {
  margin-top: 10px;
}



footer {
  position: relative;
  width: 100%;
  height: 11vh;
  background-color: #343a40;
  color: white;
  box-shadow: 0px 0px 16px 9px black;
}
/*  */
.icons ul {
  display: flex;
  margin-bottom: -2px;
}

.icons ul li {
  list-style: none;
  margin-top: -3px;
}

.icons ul li a {
  width: 25px;
  height: 25px;
  background-color: #fff;
  text-align: center;
  line-height: 30px;
  font-size: 10px;
  margin: 0 10px;
  display: block;
  border-radius: 50%;
  position: relative;
  overflow: hidden;
  border: 3px solid #fff;
  z-index: 1;
  margin-top: 16px;
}

.icons ul li a .icon {
  position: relative;
  color: #262626;
  transition: 0.5s;
  z-index: 3;
}

.icons ul li a:hover .icon {
  color: #fff;
  transform: rotateY(360deg);
}

.icons ul li a:before {
  content: "";
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  height: 100%;
  background: #55acee;
  transition: 0.5s;
  z-index: 2;
}

.icons ul li a:hover:before {
  top: 0;
}

.icons ul li:nth-child(2) a:before {
  background: black;
}
/* CopyRights */
.icons ul p {
  position: absolute;
  left: 40%;
  top: 20px;
}
.ml-auto{
  margin-top: 13px;
  font-size:20px;;
}
/* ... */

